    + Fixed security: exploit allows execution of code downloaded from
      remote server
    + Fixed XHTML troubles with pop id starting with numbers
    + Adjusted sending time in send_reminders to Server Time vs GMT
    + Category was lost wan clicking on prev/next month in month.php
    + Fixed small bug if using 59 minutes for event time
  - New Features / Enhancements / Changes:
    + Moved all common images into images folder
    + Added optional lunar phases to month.php
    + Implemented patch 1418938: Upcoming.php updated to run as include or command line
    + Added time selections to menu bar
    + Added admin option to display All Timezones (approx 360)
    + New top menu bar added
    + Made "My event text" color an option instead of always using green
    + Added tabs to pref.php
    + Removed admin_handler.php and pref_handler.php
    + New Joomla user authentication file (user-app-joomla.php)
    + Implemented magic_quote independance patch
    + Removed global table styles for activity_log.php page
    + Added support for events overlspping into next day
    + Added support for BLOBs for MSSQL DB
    + Added support for BLOBs for postgreSQL DB
    + Added option to upload category icons
    + Added option to disable small months
    + Added Previews to themes
    + Imlemented PATCH 1380867: improved ical support
    + Added feature to email ics attachment to external participants
      This address bug 1384838 and RFE 1384842
    + Changed 'Display Weekends' to affect all pages
    + Added support for themes
    + Added support for IBM DB2
    + Added support for binary objects for MySQL and SQLite.  This includes
      new support for event attachements and event comments.
      (Still need to implement for other databases.)
    + Implemented PATCH 1155607: Show all days in Month with config
    + Implemented PATCH 1060025: New display_month() function
    + Implemented PATCH 1294721: single file for mod date_formats